[gd_scene load_steps=33 format=2]

[ext_resource path="res://UIMain/ArchitectureSurvey/ArcthiectureSurvey.tscn" type="PackedScene" id=1]
[ext_resource path="res://UIMain/UIMain.gd" type="Script" id=2]
[ext_resource path="res://UIMain/ScreenBlind/ScreenBlind.tscn" type="PackedScene" id=3]
[ext_resource path="res://UIMain/Toolbar/Toolbar.tscn" type="PackedScene" id=4]
[ext_resource path="res://UIMain/TabList/PersonList.tscn" type="PackedScene" id=5]
[ext_resource path="res://UIMain/ContextMenu/ArchitectureMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://UIMain/ContextMenu/SystemMenu.tscn" type="PackedScene" id=7]
[ext_resource path="res://UIMain/SaveLoadMenu/SaveLoadMenu.tscn" type="PackedScene" id=8]
[ext_resource path="res://UIMain/TabList/ArchitectureList.tscn" type="PackedScene" id=9]
[ext_resource path="res://UIMain/ContextMenu/InfoMenu.tscn" type="PackedScene" id=10]
[ext_resource path="res://UIMain/TabList/MilitaryKindList.tscn" type="PackedScene" id=11]
[ext_resource path="res://UIMain/CreateTroop/CreateTroop.tscn" type="PackedScene" id=12]
[ext_resource path="res://UIMain/ContextMenu/TroopMenu.tscn" type="PackedScene" id=13]
[ext_resource path="res://UIMain/ContextMenu/ArchitectureAndTroopMenu.tscn" type="PackedScene" id=14]
[ext_resource path="res://UIMain/TroopDetail/TroopDetail.tscn" type="PackedScene" id=15]
[ext_resource path="res://UIMain/MainTheme.tres" type="Theme" id=16]
[ext_resource path="res://Fonts/FZLB_GBK.TTF" type="FontFile" id=17]
[ext_resource path="res://UIMain/GameRecord/GameRecord.tscn" type="PackedScene" id=18]
[ext_resource path="res://UIMain/Map/Map.tscn" type="PackedScene" id=19]
[ext_resource path="res://UIMain/TroopSurvey/TroopSurvey.tscn" type="PackedScene" id=20]
[ext_resource path="res://UIMain/FactionSurvey/FactionSurvey.tscn" type="PackedScene" id=21]
[ext_resource path="res://UIMain/TabList/FactionList.tscn" type="PackedScene" id=22]
[ext_resource path="res://UIMain/PersonDetail/PersonDetail.tscn" type="PackedScene" id=23]
[ext_resource path="res://UIMain/TabList/InfoList.tscn" type="PackedScene" id=24]
[ext_resource path="res://UIMain/ArchitectureDetail/ArchitectureDetail.tscn" type="PackedScene" id=25]
[ext_resource path="res://UIMain/Control.wav" type="AudioStream" id=26]
[ext_resource path="res://UIMain/PersonBubble/PersonBubble.tscn" type="PackedScene" id=27]
[ext_resource path="res://UIMain/PersonDialog/PersonDialog.tscn" type="PackedScene" id=28]
[ext_resource path="res://UIMain/TransportDialog/TransportDialog.tscn" type="PackedScene" id=29]
[ext_resource path="res://UIMain/BGM.gd" type="Script" id=30]
[ext_resource path="res://UIMain/TabList/AttachedArmyList.tscn" type="PackedScene" id=31]

[sub_resource type="FontFile" id=1]
size = 28
font_data = ExtResource( 17 )

[node name="UIMain" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.00012207
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPSCounter" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScreenBlind" parent="." instance=ExtResource( 3 )]
offset_left = 10.0
offset_top = 10.0
offset_right = 260.0
offset_bottom = 90.0

[node name="GameRecord" parent="." instance=ExtResource( 18 )]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -348.0
offset_bottom = -48.0

[node name="FactionSurvey" parent="." instance=ExtResource( 21 )]
anchor_top = 0.0
anchor_bottom = 0.0
offset_bottom = 400.0
full_size = 360

[node name="Map" parent="." instance=ExtResource( 19 )]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -500.0
offset_top = -548.0
offset_bottom = -48.0

[node name="PersonBubble" parent="." instance=ExtResource( 27 )]
visible = false

[node name="TransportDialog" parent="." instance=ExtResource( 29 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0

[node name="CreateTroop" parent="." instance=ExtResource( 12 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -390.0
offset_top = -240.0
offset_right = 390.0
offset_bottom = 240.0

[node name="TroopDetail" parent="." instance=ExtResource( 15 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -390.0
offset_top = -240.0
offset_right = 390.0
offset_bottom = 240.0

[node name="ArchitectureSurvey" parent="." instance=ExtResource( 1 )]
visible = false
offset_left = 24.0
offset_top = 116.0
offset_right = 274.0
offset_bottom = 616.0

[node name="TroopSurvey" parent="." instance=ExtResource( 20 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 24.0
offset_top = 116.0
offset_right = 250.0
offset_bottom = 616.0

[node name="PersonList" parent="." instance=ExtResource( 5 )]
visible = false
offset_bottom = -88.0

[node name="ArchitectureList" parent="." instance=ExtResource( 9 )]
visible = false
offset_bottom = -88.0

[node name="FactionList" parent="." instance=ExtResource( 22 )]
visible = false
offset_bottom = -88.0

[node name="MilitaryKindList" parent="." instance=ExtResource( 11 )]
visible = false
offset_bottom = -88.0

[node name="AttachedArmyList" parent="." instance=ExtResource( 31 )]
visible = false

[node name="PersonDetail" parent="." instance=ExtResource( 23 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -300.0
offset_right = 512.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="ArchitectureDetail" parent="." instance=ExtResource( 25 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -300.0
offset_right = 512.0
offset_bottom = 300.0

[node name="InfoList" parent="." instance=ExtResource( 24 )]
visible = false

[node name="PersonDialog" parent="." instance=ExtResource( 28 )]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -272.0
offset_right = 400.0
offset_bottom = -80.0

[node name="ArchitectureAndTroopMenu" parent="." instance=ExtResource( 14 )]
visible = false

[node name="ArchitectureMenu" parent="." instance=ExtResource( 6 )]
visible = false
offset_right = 0.0
offset_bottom = 0.0

[node name="TroopMenu" parent="." instance=ExtResource( 13 )]
visible = false

[node name="InfoMenu" parent="." instance=ExtResource( 10 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -68.0
offset_right = 89.9999
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2

[node name="SystemMenu" parent="." instance=ExtResource( 7 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0001
offset_top = -68.0
offset_right = 51.9999
offset_bottom = 116.0
grow_horizontal = 2
grow_vertical = 2

[node name="SaveLoadMenu" parent="." instance=ExtResource( 8 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -187.0
offset_right = 300.0
offset_bottom = 187.0
grow_horizontal = 2
grow_vertical = 2

[node name="Toolbar" parent="." instance=ExtResource( 4 )]
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -48.0
offset_bottom = 0.0

[node name="TileInfo" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource( 16 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "草原 (123, 456)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerTurn" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 26 )

[node name="BGM" type="AudioStreamPlayer" parent="."]
volume_db = -20.0
autoplay = true
script = ExtResource( 30 )

[connection signal="select_architecture" from="TransportDialog" to="ArchitectureList" method="_on_TransportDialog_select_architecture"]
[connection signal="select_leader" from="CreateTroop" to="PersonList" method="_on_CreateTroop_select_leader"]
[connection signal="select_military_kind" from="CreateTroop" to="MilitaryKindList" method="_on_CreateTroop_select_military_kind"]
[connection signal="select_person" from="CreateTroop" to="PersonList" method="_on_CreateTroop_select_person"]
[connection signal="person_row_clicked" from="PersonList" to="PersonDetail" method="_on_PersonList_person_row_clicked"]
[connection signal="person_selected" from="PersonList" to="CreateTroop" method="_on_PersonList_person_selected"]
[connection signal="person_selected" from="PersonList" to="MilitaryKindList" method="_on_PersonList_person_selected"]
[connection signal="person_selected" from="PersonList" to="ArchitectureList" method="_on_PersonList_person_selected"]
[connection signal="architecture_row_clicked" from="ArchitectureList" to="ArchitectureDetail" method="_on_ArchitectureList_architecture_row_clicked"]
[connection signal="architecture_selected" from="ArchitectureList" to="TransportDialog" method="_on_ArchitectureList_architecture_selected"]
[connection signal="military_kind_selected" from="MilitaryKindList" to="CreateTroop" method="_on_MilitaryKindList_military_kind_selected"]
[connection signal="attached_army_selected" from="AttachedArmyList" to="CreateTroop" method="_on_AttachedArmyList_attached_army_selected"]
[connection signal="architecture_clicked" from="ArchitectureAndTroopMenu" to="ArchitectureMenu" method="_on_ArchitectureAndTroopMenu_architecture_clicked"]
[connection signal="troop_clicked" from="ArchitectureAndTroopMenu" to="TroopMenu" method="_on_ArchitectureAndTroopMenu_troop_clicked"]
[connection signal="architecture_create_troop" from="ArchitectureMenu" to="CreateTroop" method="_on_ArchitectureMenu_architecture_create_troop"]
[connection signal="architecture_list_clicked" from="ArchitectureMenu" to="ArchitectureList" method="_on_ArchitectureMenu_architecture_list_clicked"]
[connection signal="attach_army" from="ArchitectureMenu" to="CreateTroop" method="_on_ArchitectureMenu_attach_army"]
[connection signal="create_troop_from_attached_army" from="ArchitectureMenu" to="AttachedArmyList" method="_on_ArchitectureMenu_create_troop_from_attached_army"]
[connection signal="detach_army" from="ArchitectureMenu" to="AttachedArmyList" method="_on_ArchitectureMenu_detach_army"]
[connection signal="faction_list_clicked" from="ArchitectureMenu" to="FactionList" method="_on_ArchitectureMenu_faction_list_clicked"]
[connection signal="person_list_clicked" from="ArchitectureMenu" to="PersonList" method="_on_ArchitectureMenu_person_list_clicked"]
[connection signal="show_attached_army_list" from="ArchitectureMenu" to="AttachedArmyList" method="_on_ArchitectureMenu_show_attached_army_list"]
[connection signal="transport_clicked" from="ArchitectureMenu" to="TransportDialog" method="_on_ArchitectureMenu_transport_clicked"]
[connection signal="update_attached_army" from="ArchitectureMenu" to="AttachedArmyList" method="_on_ArchitectureMenu_update_attached_army"]
[connection signal="troop_detail_clicked" from="TroopMenu" to="TroopDetail" method="_on_TroopMenu_troop_detail_clicked"]
[connection signal="troop_person_clicked" from="TroopMenu" to="PersonList" method="_on_TroopMenu_troop_person_clicked"]
[connection signal="info_clicked" from="SystemMenu" to="InfoMenu" method="_on_SystemMenu_info_clicked"]
[connection signal="load_clicked" from="SystemMenu" to="SaveLoadMenu" method="_on_SystemMenu_load_clicked"]
[connection signal="save_clicked" from="SystemMenu" to="SaveLoadMenu" method="_on_SystemMenu_save_clicked"]
[connection signal="game_record_clicked" from="Toolbar" to="GameRecord" method="_on_Toolbar_game_record_clicked"]
[connection signal="map_clicked" from="Toolbar" to="Map" method="_on_Toolbar_map_clicked"]
[connection signal="system_clicked" from="Toolbar" to="SystemMenu" method="_on_Toolbar_system_clicked"]
